<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp"
    android:background="@drawable/gradient2"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:contentDescription="@string/deliverydetail"
        android:padding="10dp">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:elevation="10dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/gradient_background"
            android:textColorHighlight="@color/dark"
            android:padding="10dp"

            android:text="@string/deliverydetail"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/fullName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/dark"
            android:textColorHint="#2C2B2B"
            android:background="@android:color/white"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/name"
            android:elevation="8dp"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:singleLine="true"

            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:textColor="@color/dark"
            android:layout_height="1px"
            />


        <View
            android:textColor="@color/dark"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            />


        <View
            android:textColor="@color/dark"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            />

        <View
            android:textColor="@color/dark"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            />

        <View
            android:textColor="@color/dark"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            />



        <EditText
            android:textColor="@color/dark"
            android:id="@+id/address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="#2C2B2B"
            android:background="@android:color/white"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:elevation="8dp"
            android:padding="10dp"
            android:singleLine="true"

            android:textSize="16sp" />


        <EditText
            android:textColor="@color/dark"
            android:id="@+id/landmark"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/landmark"
            android:textColorHint="#2C2B2B"
            android:inputType="textPostalAddress"
            android:elevation="8dp"
            android:padding="10dp"
            android:singleLine="true"

            android:textSize="16sp" />


        <EditText
            android:textColor="@color/dark"
            android:id="@+id/zip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:textColorHint="#2C2B2B"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/zipcode"
            android:inputType="number"
            android:elevation="8dp"
            android:padding="10dp"
            android:singleLine="true"

            android:textSize="16sp" />

        <Button
            android:textColor="@color/white"
            android:id="@+id/btnOrder"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cod"
            android:elevation="@dimen/elevationCard"
            android:contentDescription="@string/cod"
            android:background="#E91E63"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="40dp">

        </Button>




    </LinearLayout>
</RelativeLayout>