<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".view.CartActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="@dimen/elevation_appbar_layout"
        style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:elevation="@dimen/elevation_appbar_layout">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="always"
            app:layout_scrollFlags="scroll|enterAlways|snap">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_activity_toolbar_layout_height"
                android:elevation="@dimen/elevation_appbar_layout"
                android:background="@color/colorPrimaryDark">
                <TextView
                    android:text="@string/cart"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="cursive"
                    android:textSize="@dimen/textsizeappbarlayout"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layoutmarginTop"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:elevation="@dimen/elevation_appbar_layout"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total"
                android:textAlignment="center"
                android:textSize="@dimen/textSizeTotal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dollar"
                android:textSize="@dimen/textSizeTotal" />

        </LinearLayout>

        <Button
            android:id="@+id/btnnext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textSize="@dimen/detail_body_text_size" />


    </LinearLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>