<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.LoginActivity"
    android:background="@drawable/gradient2"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="@dimen/elevation"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:background="@drawable/gradient_background"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/login_emailid"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingBottom="10dp"
            android:textColorHint="#2C2B2B"
            android:textStyle="bold"
            android:background="@android:color/white"
            android:drawablePadding="8dp"

            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"

            android:textSize="22sp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            />

        <EditText
            android:id="@+id/login_password"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingTop="20dp"
            android:textColorHint="#2C2B2B"
            android:textColor="@color/black"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textSize="19sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="8dp" >

        </LinearLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@android:color/transparent"
            android:padding="3dp"
            android:text="@string/login"
            android:contentDescription="@string/login"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:elevation="@dimen/elevationCard"
        android:padding="5dp"
        android:text="@string/createacc"
        android:background="@android:color/transparent"
        android:textSize="15sp" />

</RelativeLayout>
